# dt

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE-MIT  README.md  package.json  pnpm-lock.yaml  roadmap.md  rustfmt.toml
.github/: dependabot.yml
.github/workflows/: _typos.toml  docs.yml  publish.yml  release.yml  tests.yml  typo-check.yaml  unit-tests.yml
config/: test.toml
docs/: CNAME  contributing.html  contributing.md  host-specific.html  host-specific.md  index.html  index.md  installation.html  installation.md
docs/.vitepress/: config.js
docs/.vitepress/theme/: style.css
docs/assets/: Home.012c43b5.js  Home.027dee1c.js  Home.080eb00d.js  Home.0d92d313.js  Home.47337b62.js  Home.499f33cd.js  Home.4c8c2358.js  Home.5df54640.js  Home.603ab416.js  Home.74659134.js  Home.93fd653c.js  Home.9d4570d4.js  Home.b2a5a9bc.js  Home.b85bb71b.js  Home.cae9f7c6.js  Home.cb4dbdfd.js  Home.d96819e1.js  Home.dd2b578f.js  app.0e8b29b6.js  app.1279ae71.js  app.12889b82.js  app.2b904881.js  app.3f0899c2.js  app.4c187c71.js  app.582d3a9a.js  app.65bba18d.js  app.7bc948ae.js  app.8da8cbf3.js  app.b647a34b.js  app.b78d5d90.js  app.b8a0027b.js  app.c1d56b52.js  app.dcc9b8a9.js  app.f2490086.js  app.f6eb85fa.js  app.fbfb8d02.js  config_guide_01-default-behaviours.md.003983ef.js  config_guide_01-default-behaviours.md.003983ef.lean.js  config_guide_01-default-behaviours.md.08dd620e.js  config_guide_01-default-behaviours.md.08dd620e.lean.js  (+1260 more)
docs/config/: default-behaviours.md  groups.md  index.md  key-references.html  key-references.md  syncing-methods.md
docs/config/guide/: 01-default-behaviours.html  01-default-behaviours.md  02-groups.html  02-groups.md  03-syncing-methods.html  03-syncing-methods.md  04-host-specific.html  04-host-specific.md  05-error-handling.html  05-error-handling.md  05-priority.html  05-priority.md  06-error-handling.html  06-error-handling.md  06-filename-manipulating.html  06-filename-manipulating.md  07-error-handling.html  07-error-handling.md  07-templating.html  07-templating.md  99-error-handling.html  99-error-handling.md  default-behaviours.html  default-behaviours.md  error-handling.html  error-handling.md  groups.html  groups.md  host-specific.html  host-specific.md  index.html  index.md  syncing-methods.html  syncing-methods.md
docs/features/: 01-host-specific.html  01-host-specific.md  02-scope.html  02-scope.md  03-filename-manipulating.html  03-filename-manipulating.md  04-templating.html  04-templating.md  host-specific.html  host-specific.md  index.html  index.md  scope.html  scope.md
docs/host-specific/: index.html  index.md  suffix.html  suffix.md
dt-cli/: Cargo.toml  README.md
dt-cli/src/: main.rs
dt-core/: Cargo.toml  README.md
dt-core/src/: config.rs  error.rs  item.rs  lib.rs  main.rs  registry.rs  syncing.rs  utils.rs
dt-core/tests/: ignored_patterns.rs  paths_expansion.rs  validating.rs
dt-server/: Cargo.toml
dt-server/src/: main.rs
testroot/: README.md
testroot/configs/: basedir.toml  empty_ignored_array.toml  empty_source_array.toml  except_dot_asterisk_glob.toml  expand_glob.toml  expand_tilde.toml  expand_tilde_with_glob.toml  no_per_host_items.toml  overriding_allow_overwrite_no_global.toml  overriding_allow_overwrite_with_global.toml  overriding_both_allow_overwrite_and_method_no_global.toml  overriding_both_allow_overwrite_and_method_with_global.toml  overriding_method_no_global.toml  overriding_method_with_global.toml  partial_filename.toml  regular_ignore.toml  s_dir_t_dir.toml  s_dir_t_file.toml  s_file_t_dir.toml  s_file_t_file.toml  sorting_and_deduping.toml  staging.toml
testroot/configs/config/: overriding_global_config-allow_overwrite_no_global.toml  overriding_global_config-allow_overwrite_with_global.toml  overriding_global_config-both_allow_overwrite_and_method_with_global.toml  overriding_global_config-hostname_sep_no_global.toml  overriding_global_config-hostname_sep_with_global.toml  overriding_global_config-method_no_global.toml  tilde_expansion-all.toml  validation-basedir_contains_hostname_sep.toml  validation-empty_basedir.toml  validation-empty_group_name.toml  validation-empty_target.toml  validation-except_dot_asterisk_glob.toml  validation-slash_in_group_name.toml  validation-source_item_contains_hostname_sep.toml  validation-source_item_is_absolute.toml  validation-source_item_referencing_parent.toml
testroot/configs/syncing/: expansion-glob.toml  globbing-expand_glob.toml  globbing-glob.toml  invalid_configs-basedir_is_file.toml  invalid_configs-basedir_is_target.toml  invalid_configs-basedir_unreadable-nonexistent.toml  invalid_configs-basedir_unreadable-not_a_directory.toml  invalid_configs-basedir_unreadable-permission_denied.toml  invalid_configs-non_existing_basedir.toml  invalid_configs-same_names_in_multiple_locals.toml  invalid_configs-staging_is_file.toml  invalid_configs-staging_readonly.toml  invalid_configs-target_is_file_absolute.toml  invalid_configs-target_is_file_has_tilde.toml  invalid_configs-target_is_file_relative.toml  invalid_configs-target_readonly.toml  invalid_configs-unreadable_source.toml
