[package]
name = "dt-cli"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
color-eyre = "0.5.11"
dt-core = { path = "../dt-core" }
log = "0.4.14"
pretty_env_logger = "0.4.0"
structopt = "0.3.23"

# Author: Blurgy <gy@blurgy.xyz>
# Date:   Sep 17 2021, 21:32 [CST]
