[package]
name = "dt-cli"
description = "Syncing dotfiles and more"
version = "0.2.1"
edition = "2021"
authors = ["Gaoyang Zhang <gy@blurgy.xyz>"]
documentation = "https://dt-cli-docs.blurgy.xyz/"
license = "MIT OR Apache-2.0"
repository = "https://github.com/blurgyy/dt"
categories = ["command-line-utilities", "config"]
keywords = ["dotfiles", "manager", "syncing", "config"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
color-eyre = "0.5.11"
dirs = "4.0.0"
dt-core = { path = "../dt-core", version = "0.2.1" }
log = "0.4.14"
pretty_env_logger = "0.4.0"
structopt = "0.3.23"

# Author: Blurgy <gy@blurgy.xyz>
# Date:   Sep 17 2021, 21:32 [CST]
