[package]
name = "dt-cli"
description = "$HOME, $HOME everywhere"
version = "0.6.0"
edition = "2021"
authors = ["Gaoyang Zhang <gy@blurgy.xyz>"]
documentation = "https://dt.cli.rs/"
license = "MIT OR Apache-2.0"
repository = "https://github.com/blurgyy/dt"
categories = ["command-line-utilities", "config"]
keywords = ["config", "dotfile", "dotfiles", "manager"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dirs = "4.0.0"
dt-core = { path = "../dt-core", version = "0.6.0" }
log = "0.4.14"
pretty_env_logger = "0.4.0"
structopt = "0.3.25"

# Author: Blurgy <gy@blurgy.xyz>
# Date:   Sep 17 2021, 21:32 [CST]
