[package]
name = "dt-core"
description = "Core utilities used by dt-cli"
version = "0.3.0"
edition = "2021"
authors = ["Gaoyang Zhang <gy@blurgy.xyz>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/blurgyy/dt"
categories = ["config"]
keywords = ["syncing", "config"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dirs = "4.0.0"
gethostname = "0.2.1"
glob = "0.3.0"
log = "0.4.14"
path-clean = "0.1.0"
serde = { version = "1.0.130", features = ["derive"] }
shellexpand = "2.1.0"
toml = "0.5.8"

[dev-dependencies]
color-eyre = "0.5.11"
pretty_assertions = "1.0.0"

# Author: Blurgy <gy@blurgy.xyz>
# Date:   Sep 17 2021, 21:32 [CST]
