[package]
name = "dt-core"
description = "Core utilities used by dt-cli"
version = "0.6.3"
edition = "2021"
authors = ["Gaoyang Zhang <gy@blurgy.xyz>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/blurgyy/dt"
categories = ["config"]
keywords = ["syncing", "config"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
content_inspector = "0.2.4"
dirs = "4.0.0"
gethostname = "0.2.2"
glob = "0.3.0"
log = "0.4.14"
minijinja = "0.12.0"
path-clean = "0.1.0"
regex = "1.5.4"
serde = { version = "1.0.133", features = ["derive"] }
serde_regex = "1.1.0"
serde_tuple = "0.5.0"
shellexpand = "2.1.0"
toml = "0.5.8"

[dev-dependencies]
color-eyre = "0.6.0"
pretty_assertions = "1.0.0"

[target.armv7-unknown-linux-gnueabihf]
linker = "arm-linux-gnueabihf-gcc"

[target.aarch64-unknown-linux-gnu]
linker = "aarch64-linux-gnu-gcc"

# Author: Blurgy <gy@blurgy.xyz>
# Date:   Sep 17 2021, 21:32 [CST]
