[package]
name = "dt-core"
description = "Core utilities used by dt-cli"
version = "0.7.10"
edition = "2021"
authors = ["Gaoyang Zhang <gy@blurgy.xyz>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/blurgyy/dt"
categories = ["config"]
keywords = ["syncing", "config"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
content_inspector = "0.2.4"
dirs = "5.0.0"
gethostname = "0.4.1"
glob = "0.3.1"
handlebars = "4.3.6"
log = "0.4.17"
path-clean = "1.0.1"
regex = "1.7.1"
serde = { version = "1.0.152", features = ["derive"] }
serde_regex = "1.1.0"
serde_tuple = "0.5.0"
shellexpand = "3.0.0"
sys-info = "0.9.1"
toml = "0.7.0"
url = { version = "2.3.1", features = ["serde"] }
users = "0.11.0"

[dev-dependencies]
color-eyre = "0.6.2"
pretty_assertions = "1.3.0"

[target.armv7-unknown-linux-gnueabihf]
linker = "arm-linux-gnueabihf-gcc"

[target.aarch64-unknown-linux-gnu]
linker = "aarch64-linux-gnu-gcc"

# Author: Blurgy <gy@blurgy.xyz>
# Date:   Sep 17 2021, 21:32 [CST]
