[package]
name = "dt-server"
description = "$HOME, $HOME everywhere"
version = "0.1.0"
edition = "2021"
authors = ["Gaoyang Zhang <gy@blurgy.xyz>"]
documentation = "https://dt.cli.rs/"
license = "MIT OR Apache-2.0"
repository = "https://github.com/blurgyy/dt"
categories = ["command-line-utilities", "config"]
keywords = ["dotfiles", "manager", "syncing", "config"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dirs = "4.0.0"
dt-core = { path = "../dt-core", version = "0.6.0" }
log = "0.4.14"
pretty_env_logger = "0.4.0"
structopt = "0.3.25"
tokio = { version = "1.14.0", features = ["full"] }
warp = "0.3.2"

# Author: Blurgy <gy@blurgy.xyz>
# Date:   Oct 19 2021, 09:35 [CST]
